--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "redux-slider",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm":"5.6.0",
+    "node":"10.2.1"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.7.0",
